<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boschetstudios.cubscoutweeklytracker.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/packTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/packText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineT1"
        app:layout_constraintEnd_toEndOf="@+id/spinnerDen"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDen" />

    <Spinner
        android:id="@+id/spinnerDen"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/denPick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="@+id/guidelineL2"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="67dp" />

    <TextView
        android:id="@+id/childNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/childName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineT1"
        app:layout_constraintStart_toStartOf="@+id/spinnerDen"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDen" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/childNameText"
        app:layout_constraintTop_toTopOf="@+id/guidelineT1" />

    <CheckBox
        android:id="@+id/attendanceCheckBox"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/attendanceText"
        app:layout_constraintStart_toStartOf="@+id/childNameText"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <CheckBox
        android:id="@+id/bookCheckBox"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/bookText"
        app:layout_constraintStart_toStartOf="@+id/childNameText"
        app:layout_constraintTop_toBottomOf="@+id/attendanceCheckBox" />

    <CheckBox
        android:id="@+id/uniformCheckBox"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/uniformText"
        app:layout_constraintStart_toStartOf="@+id/childNameText"
        app:layout_constraintTop_toBottomOf="@+id/bookCheckBox" />

    <CheckBox
        android:id="@+id/parentCheckBox"
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/parentText"
        app:layout_constraintStart_toStartOf="@+id/childNameText"
        app:layout_constraintTop_toBottomOf="@+id/uniformCheckBox" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="323dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nextButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/backButtonText"
        app:layout_constraintStart_toStartOf="@+id/guidelineL2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/newScoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/newScoutButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineL2"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

</android.support.constraint.ConstraintLayout>
