<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boschetstudios.cubscoutweeklytracker.addChildActivity">

    <android.support.constraint.Guideline
        android:id="@+id/childGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp" />

    <android.support.constraint.Guideline
        android:id="@+id/childGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fNameText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toTopOf="@+id/firstNameEdit" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lNameText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toTopOf="@+id/lastNameEdit" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/childGuideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/childGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEdit" />

    <TextView
        android:id="@+id/berthDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bDayText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toTopOf="@+id/birthdayButton" />

    <TextView
        android:id="@+id/denPickText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/packPText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toTopOf="@+id/denPickSpinner" />

    <Spinner
        android:id="@+id/denPickSpinner"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/denPick"
        app:layout_constraintStart_toStartOf="@+id/childGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/birthdayButton" />

    <Button
        android:id="@+id/newChild"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/newChildText"
        app:layout_constraintEnd_toStartOf="@+id/childGuideline1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/exitButtonText"
        app:layout_constraintEnd_toStartOf="@+id/childGuideline1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/newChild" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/genderText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline2"
        app:layout_constraintTop_toTopOf="@+id/genderPickSpinner" />

    <Spinner
        android:id="@+id/genderPickSpinner"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/genderPick"
        app:layout_constraintStart_toStartOf="@+id/childGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/denPickSpinner" />

    <Button
        android:id="@+id/birthdayButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/birthdayButtonText"
        app:layout_constraintStart_toStartOf="@+id/childGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEdit" />

</android.support.constraint.ConstraintLayout>
